--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -266,3 +266,10 @@ eprint = {
     year = {n.d.},
     note = {Accessed 12.04.2019}
 }
+@misc{StaticArrays,
+    key = {StaticArrays.jl},
+    url = {https://github.com/JuliaArrays/StaticArrays.jl},
+    urldate = {2019-04-26},
+    year = {n.d.},
+    note = {Accessed 26.04.2019}
+}
