writing on the plane

--- a/02_julia.tex
+++ b/02_julia.tex
@@ -28,6 +28,7 @@ Since Julia is an open source and free program to use, one of its strengths is t
 \label{sec:Metaprogramming}
 In the last year there have been published numerous projects that makes coding in Julia easier. A lot of these projects exploits that Julia is a dynamic language and that it has metaprogramming. In the blog post from \cite{juliaBlogRelease2012} the creators says that Julia shall contain true macros like Lisp. Macros are functions in Julia that are using metaprogramming to modify your existing code to give some extra functionality. The macro functions are easily recognized by an "@" in front of the function name. To use a macro function on any function, you simply call the macro function before original function call, and the metaprogramming will handle the rest. I will now show three examples of macro functions in Julia that are very useful when creating a numerical simulations.
 \subsection{Profiling}
+\label{sec:profiling}
 Profiling is an effective method to obtain overview of where bottlenecks lie in a code when trying to optimize its performance. The method consists of taking snapshots of the code with small time intervals and for each snapshot we register what function we are at and all the functions that have been called to get to this function. The latter is called the stack trace. By counting how many times a function is in the stack trace, we get an overview of how much time we spend in each function and where they are called from. Since we only register the number of times we are in each function, this will not give a perfect picture on how much time we spend in each function. We even risk not registering all functions we use, but since the time interval between the snapshots are small (e.g. every tenth microsecond), a function that is not registered will not be interesting to optimize as it already is very fast. 
 \begin{figure}[htb]
     \centering
