--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -35,42 +35,39 @@ Line number 8 in \texttt{assembleFlowSystem!()} is the last line I have not comm
 Summed up the calculation of the residual functions using local AD is based on two modules. The first is the actual AD tool with the \texttt{LAD} struct, and the second is \texttt{FlowSystem} which keeps track of the global system and what calculations should be performed by the AD tool. With this approach we lose some of the advantages using the other AD tools where the discrete residual functions looked very similar to the continuous case, like explained in \autoref{sec:setupGovEq}. The main structure of \texttt{assembleFlowSystem!()} will however be the same no matter what type of simulation, hence making modifications to the code, or building another simulation, will not demand a complete change of code structure. \todo{sjekk om dette ikke ble litt vagt litt senere.}
 
 \section{Optimizing Local AD}
-As explained in the beginning of this chapter, the main idea behind local AD is to reuse the Jacobian to save memory usage and extra memory allocations. The implementation given in \autoref{sec:LADImplementation} has however left out some small, but key parts of the implementation that will massively decrease the memory usage and speed used. This is purely implementation specific differences that has been left out to make the introduction to local AD more clear. It will not change the theory behind using local AD to solve PDE's.
+As explained in the beginning of this chapter, the main idea behind local AD is to reuse the Jacobian to save memory usage and extra memory allocations. The implementation given in \autoref{sec:LADImplementation} has however left out some small, but key parts of the implementation that will massively decrease the memory and speed usage. This is purely implementation specific differences that has been left out to make the introduction to local AD more clear. It will not change the theory behind using local AD to solve PDE's.
 
 \subsection{Dynamic VS Static Arrays}
-The difference between a dynamic array and a static array is that a dynamic array can be extended or shortened as much as you like while a static array has a fixed length. Using a static array will give computational gain concerning speed and memory allocations compared to a dynamic array. This is because the compiler knows that a given static array has the given fixed length forever and hence it can allocate that space in memory in advance and optimize the code. With a dynamic array it does not know if the array grows larger, or maybe becomes slower and it is much harder to optimize the code. 
+The difference between a dynamic array and a static array is that a dynamic array can be extended or shortened as much as you like while a static array has a fixed length. Using a static array will give computational gain concerning speed and memory allocations compared to a dynamic array. This is because the compiler knows that a static array has the given fixed length forever and hence it can allocate the exact memory needed in advance and hence optimize the machine code. With a dynamic array it does not know if the array will grow larger, or smaller and it is much harder to optimize the machine code. 
 
-Julia has a package called \emph{\cite{StaticArrays}} that provides static arrays to the the built in arrays without the possibility for changing the size of the array. The package provides two types of vectors, \texttt{SVector} and \texttt{MVector}. Both are static vectors, but \texttt{MVector} is mutable meaning the values inside the vector can be changed, where the values inside an \texttt{SVector} is final when the vector is defined. This makes SVector ideal for \texttt{LAD.derivatives} since when we perform operations on \texttt{LAD} variables, new \texttt{LAD} variables are returned. \texttt{MVector} is however optimal for the elements in the sparse matrix \texttt{FlowSystem.globalJac} as we know how long each element vector will be, but we want to be able to change the values inside each vector. 
+Julia has a package called \emph{\cite{StaticArrays}} that provides static arrays to the the built in arrays without the possibility for changing the size of the array. The package provides two types of vectors, \texttt{SVector} and \texttt{MVector}. Both are static vectors, but \texttt{MVector} is mutable, meaning the values inside the vector can be changed, where the values inside an \texttt{SVector} is final when the vector is defined. This makes SVector ideal for \texttt{LAD.derivatives} since when we perform operations on \texttt{LAD} variables, new \texttt{LAD} variables are returned. \texttt{MVector} is however optimal for the elements in the sparse matrix \texttt{FlowSystem.globalJac} as we know how long each element vector will be, but we want to be able to change the values inside each vector. 
 
-When the implementation is changed to use static vectors it needs to know how long these vectors are. When building a simulation it is not a problem to say in advance how many derivatives we need and when the compiler knows this before compilation it can optimize the machine code. OPM solves this by creating a template class \todo{Legg til både kilde og sjekk formulering} such that the compiler always knows that for this simulation, the static array will always have this fixed length. This is important because we do not want to create \texttt{LAD} structs with different lengths for \texttt{LAD.derivatives} and we want all vectors in \texttt{FlowSystem.globalJac} to have that same length. If we define this clearly the compiler can optimize the code much better than if it does not know if for example some elements in \texttt{globalJac} suddenly will be allocated with a longer static mutable array. This will also make the implementation of the operators of \texttt{LAD} easier, as we know for certain that all \texttt{LAD} variables will have the same length on \texttt{derivatives}. The best implementation I have found for this in Julia is to declare a global constant variable in the local AD module such that the new implementation of \texttt{LAD} becomes:
+When the implementation is changed to use static vectors it needs to know how long these vectors are. When building a simulation it is not a problem to say in advance how many derivatives we need and when the compiler knows this before compilation it can optimize the machine code. OPM solves this by creating a template class \todo{Legg til både kilde og sjekk formulering} such that the compiler always knows that for this simulation, the static array will always have this fixed length. This is important because we do not want to create \texttt{LAD} structs with different lengths for \texttt{LAD.derivatives} and we want all vectors in \texttt{FlowSystem.globalJac} to have that same length. If we define this clearly the compiler can optimize the machine code much better than if it does not know if for example some elements in \texttt{globalJac} suddenly will be allocated with a longer static mutable array. This will also make the implementation of the operators of \texttt{LAD} easier, as we know for certain that all \texttt{LAD} variables will have \texttt{derivatives} with the same length. The best implementation I have found for this in Julia is to declare a global constant variable in the local AD module such that the new implementation of \texttt{LAD} becomes:
 \lstinputlisting{code/LAD_struct.jl}
 One disadvantage with this implementation is that the Local AD module needs to be modified to work with simulations with more primary variables for each cell. \todo{Må se om det finnes noen annen måte, hvis ikke bør det kanskje kommenteres at det er litt krøkkete} The implementation of \texttt{FlowSystem} imports the local AD module, hence it can also use the global constant in the new implementation:
 \lstinputlisting{code/FlowSystemFixed.jl}
 
 \section{Flow Solver with Local AD}
 \label{sec:flowSolverWithLAD}
-\begin{itemize}
-    \item Forskjellen på statiske og dynamisk vektorer
-    \item Videre optimalisering av LAD
-    \item profileringen av createVariable
-\end{itemize}
-
+Now that \texttt{FlowSystem} and \texttt{LAD} has been implemented with static arrays it is interesting to see how this method compares to \texttt{FAD} and \texttt{CJAD} in the simulation from \autoref{ch:FlowSolver}. Since OPM is a simulator ment to be much faster than MRST, it is assumed that since Julia is supposed to run as fast as C, the local AD approach will give a computational gain. With the implementation given in this chapter this is however not the case. It performs worse than \texttt{CJAD} and similar to \texttt{FAD}. As explained in \autoref{sec:profiling}, profiling is an efficient way of finding the bottlenecks in a code, and this is a perfect example of when to use it - the code was expected to be faster, but it was not, so it is important to find out if there is a small part of the code that is slow. \autoref{fig:profileSlowCreateVar} shows a screenshot of a profile result from running the flow solver simulation. The screenshot only contains blocks from the \texttt{flux} function. Two blocks are marked with squares and two other blocks with brighter diagonal stripes. The blocks with squares are time spent in \texttt{createVariable()} and the brighter diagonal stripes are AD calculations in \texttt{flux}.
 \begin{figure}[H]
     \centering
     \begin{subfigure}[t]{0.75\textwidth}
         \includegraphics[height = 0.35\textheight, width=\textwidth ]{figures/profilingSlowCreateVariablesFlux.png}
         \caption{}
-        \label{fig:profileFastCreateVar}
+        \label{fig:profileSlowCreateVar}
     \end{subfigure}
     \hspace{0.06\textwidth}
     \begin{subfigure}[t]{0.18\textwidth}
         \includegraphics[height = 0.35\textheight, width=\textwidth]{figures/profilingFastCreateVariablesFlux.png}
         \caption{}
-        \label{fig:profileSlowCreateVar}
+        \label{fig:profileFastCreateVar}
     \end{subfigure}
-    \caption{}
+    \caption{The figures shows screenshots of the profile result from the \texttt{flux} function in the flow solver simulation from \autoref{ch:FlowSolver}. The blocks marked with squares are time spent in \texttt{createVariable()} and the blocks with bright diagonal lines are calculations in \texttt{flux}. \autoref{fig:profileSlowCreateVar} uses a slow version of \texttt{createVariable()} while \autoref{fig:profileFastCreateVar} uses a faster version.}
 \end{figure}
+It makes no sense that creating a \texttt{LAD} struct should take more time than the actual AD calculations. This indicates that the \texttt{createVariable()} function is poorly implemented. This is also the case as even though we only want to create a static \texttt{Svector}, we start by creating a dynamic vector of zeros, then we modify the vector by changing one of the values to one, and finally we convert the dynamic vector into a static \texttt{SVector}. The new implementation seen below is a much better implementation where the \texttt{SVector} is created immediately as the correct vector without any use of dynamic vectors.
+\lstinputlisting{code/createVariableFast.jl}
+The new profiling result with the updated \texttt{createVariable()} can be seen in \autoref{fig:profileFastCreateVar}
 
-\section{Flow Solver with Local AD}
 
 \todo[inline]{Se på parallellisering for lokal AD?}
